--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="C:/Users/Miko/Dropbox/Medaglia - Lozano/Jpulse-CSP/lib/jgrapht-0.8.2.zip"/>
 	<classpathentry kind="lib" path="C:/Users/Miko/Dropbox/Medaglia - Lozano/Jpulse-CSP/lib/jgrapht-jdk1.6.jar"/>
+	<classpathentry kind="lib" path="lib/jgrapht-0.8.2.zip"/>
+	<classpathentry kind="lib" path="lib/jgrapht-jdk1.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
